service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kristianwindsor
  labels:
    app: kristianwindsor
spec:
  selector:
    app: kristianwindsor
  ports:
    - port: 80
